# aibot

./: .gitignore  LICENSE  mypy.ini  pyproject.toml  ruff.toml
src/aibot/: _version.py  client.py
src/aibot/model/: time_zone.py  user_dto.py
src/aibot/sqlite/: sqlite_dao_base.py  user_dao.py
src/aibot/util/: logging_setup.py  permission.py
