[project]
name = "aibot"
version = "0.1.0"
description = "Original Discord Application."
authors = [
    { name = "ema775" }
]
dependencies = [
    "aiosqlite>=0.20.0",
    "discord>=2.3.2",
    "openai>=1.59.6",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "types-pytz>=2024.2.0.20241221",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "mypy>=1.14.1",
    "ruff>=0.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aibot"]
